# yahtzee

./: LICENSE  README.md  pyproject.toml
.github/workflows/: test-package.yml
src/yahtzee/: __init__.py  fives_box.py  four_of_a_kind_box.py  fours_box.py  full_house_box.py  high_straight_box.py  low_straight_box.py  ones_box.py  play_yahtzee.py  sixes_box.py  three_of_a_kind_box.py  threes_box.py  twos_box.py  yahtzee_box.py
tests/: test_fives_box.py  test_four_of_a_kind_box.py  test_fours_box.py  test_full_house_box.py  test_high_straight_box.py  test_low_straight_box.py  test_ones_box.py  test_play_yahtzee.py  test_sixes_box.py  test_three_of_a_kind_box.py  test_threes_box.py  test_twos_box.py  test_yahtzee_box.py
