[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yahtzee"
version = "0.0.1"
dependencies = [
    "numpy",
]
requires-python = ">=3.10, <3.13"
authors = [
  {name="Steven Dahdah", email="sdahdah@users.noreply.github.com"},
]
description = "Yahtzee: The Collaborative Git Exercise"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
play_yahtzee = "yahtzee.play_yahtzee:play_yahtzee"

[project.urls]
Homepage = "https://github.com/decargroup/yahtzee"
Issues = "https://github.com/decargroup/yahtzee/issues"
